[tool.poetry]
name = "httprequest"
version = "0.1.0"
description = ""
authors = ["davilos <daviloscostagg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
blue = "^0.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
